src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>App Lifecycle</fullName>
        <description>Process for app lifecycle</description>
        <isActive>true</isActive>
        <values>
            <fullName>Demo</fullName>
        </values>
        <values>
            <fullName>Development</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Published</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Terminated</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Professional Services Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Lead</fullName>
        </values>
        <values>
            <fullName>Sale</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SBD Upsell</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Build Value</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Qualify</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Process %28Trial to Purchase%29</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Agree</fullName>
        </values>
        <values>
            <fullName>Build Value</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closing</fullName>
        </values>
        <values>
            <fullName>Discover</fullName>
        </values>
        <values>
            <fullName>Migration Scoping</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Purchased</fullName>
        </values>
        <values>
            <fullName>Qualify</fullName>
        </values>
        <values>
            <fullName>Suspended</fullName>
        </values>
        <values>
            <fullName>Terminated</fullName>
        </values>
        <values>
            <fullName>Validate</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Theme Lifecycle</fullName>
        <description>Theme Lifecycle</description>
        <isActive>true</isActive>
        <values>
            <fullName>Demo</fullName>
        </values>
        <values>
            <fullName>Design</fullName>
        </values>
        <values>
            <fullName>Development</fullName>
        </values>
        <values>
            <fullName>Integration</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Published</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Removed</fullName>
        </values>
        <values>
            <fullName>Terminated</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Upsell</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Agree</fullName>
        </values>
        <values>
            <fullName>Build Value</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closing</fullName>
        </values>
        <values>
            <fullName>Discover</fullName>
        </values>
        <values>
            <fullName>Migration Scoping</fullName>
        </values>
        <values>
            <fullName>Qualify</fullName>
        </values>
        <values>
            <fullName>Validate</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Management_Services__c</fullName>
        <description>Field that determines the type of account management services they receive. Requested by BAP-3081.</description>
        <label>Account Management Services</label>
        <picklist>
            <picklistValues>
                <fullName>Premium Account Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Account Management</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Mismatch__c</fullName>
        <formula>IF( MBA_Account_ID__c &lt;&gt; MBAAccountID__c , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Mismatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acct_Active_Store_Count__c</fullName>
        <description>Used for pricing 2015</description>
        <formula>Account.Active_Stores_Opp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for pricing 2015</inlineHelpText>
        <label>Acct Active Store Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Trials__c</fullName>
        <description>Pulls &quot;Active Trials&quot; value from the account</description>
        <formula>Account.Active_Trials_Opp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls &quot;Active Trials&quot; value from the account</inlineHelpText>
        <label>Active Trials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AdGroup__c</fullName>
        <label>Ad Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdKeywords__c</fullName>
        <label>Ad Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <description>Originally mapped from lead convert from the &quot;MKT Hubspot Additional Information&quot; field which is slated to be deprecated</description>
        <inlineHelpText>Originally mapped from lead convert from the &quot;MKT Hubspot Additional Information&quot; field which is slated to be deprecated</inlineHelpText>
        <label>zAdditional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Admin_Store_Login_URL__c</fullName>
        <description>What is the admin store login URL of the prospect&apos;s current store?</description>
        <inlineHelpText>What is the admin store login URL of the prospect&apos;s current store?</inlineHelpText>
        <label>Admin Store Login URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Store_Username__c</fullName>
        <description>Admin Store Username for migration team prescoping</description>
        <inlineHelpText>Admin Store Username for migration team prescoping</inlineHelpText>
        <label>Admin Store Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Store_password_encrypted__c</fullName>
        <description>Encrypted admin store password</description>
        <label>Admin Store password (encrypted)</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Affiliate__c</fullName>
        <label>Affiliate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <label>Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Monthly_Growth_Rate_Adjustment__c</fullName>
        <description>Populated by Sales and used in Docusign Contract</description>
        <inlineHelpText>Populated by Sales and used in Docusign Contract</inlineHelpText>
        <label>zDOCUSIGN Monthly Growth Rate Adjustment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Volume_Order_Cap__c</fullName>
        <description>Populated by Sales and used in Docusign Contract</description>
        <inlineHelpText>Populated by Sales and used in Docusign Contract</inlineHelpText>
        <label>zDOCUSIGN Annual Volume Order Cap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Volume_Order_Increment__c</fullName>
        <description>Populated by Sales and used in Docusign Contract</description>
        <inlineHelpText>Populated by Sales and used in Docusign Contract</inlineHelpText>
        <label>zDOCUSIGN Annual Volume Order Increment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AppRev_Share_Payment_Amount__c</fullName>
        <description>Amount of the partner&apos;s most recent payment</description>
        <inlineHelpText>Amount of the partner&apos;s most recent payment</inlineHelpText>
        <label>App Rev Share Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>App_Approved_Date__c</fullName>
        <description>Date that the app or theme was approved</description>
        <inlineHelpText>Date that the app or theme was approved</inlineHelpText>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>App_Email__c</fullName>
        <description>Collect email addresses from Dev Portal/Apop Registry</description>
        <inlineHelpText>Collect email addresses from Dev Portal/Apop Registry</inlineHelpText>
        <label>App Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>App_ID__c</fullName>
        <description>App Id sent from the Integrated Apps (Marketplace) team to Salesforce</description>
        <inlineHelpText>AId sent from the Integrated Apps (Marketplace) team to Salesforce</inlineHelpText>
        <label>App ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Plan__c</fullName>
        <label>App Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Public_Website_Listing__c</fullName>
        <description>Is the App on the public website?</description>
        <inlineHelpText>Is the App on the public website?</inlineHelpText>
        <label>App Public Website Listing</label>
        <picklist>
            <picklistValues>
                <fullName>Not Live</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coming Soon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>App_Rev_Share_Payment_Date__c</fullName>
        <description>Date of app partner&apos;s last rev share payment</description>
        <inlineHelpText>Date of app partner&apos;s last rev share payment</inlineHelpText>
        <label>App Rev Share Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>App_Revshare__c</fullName>
        <description>App revshare status</description>
        <inlineHelpText>App revshare status</inlineHelpText>
        <label>App Revshare Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>App_Single_Click_URL__c</fullName>
        <description>What is the app&apos;s single click URL?</description>
        <inlineHelpText>What is the app&apos;s single click URL?</inlineHelpText>
        <label>App Single Click URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>App_Store_Status__c</fullName>
        <description>Status field - used for App and Theme opp record types - zed because we want to use the main opportunity status field</description>
        <inlineHelpText>Status field - used for App and Theme opp record types - zed because we want to use the main opportunity status field</inlineHelpText>
        <label>zApp Store Status</label>
        <picklist>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unpublished</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coming Soon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft - Under Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back to Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT/QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hidden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>App_Support_Contact__c</fullName>
        <description>How can a client contact support for this app?</description>
        <inlineHelpText>How can a client contact support for this app?</inlineHelpText>
        <label>App Support Contact</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>App_public_url__c</fullName>
        <description>App or theme public URL</description>
        <inlineHelpText>App or theme public URL</inlineHelpText>
        <label>Public URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BA_Store_ID__c</fullName>
        <description>Formula field to calculate the MBA Subscription ID on store and trial record types</description>
        <formula>if( 

RecordTypeId = &quot;01213000000AUtx&quot; ||
RecordTypeId = &quot;01213000000AUty&quot;, 

MBASubscriptionID__c,null)</formula>
        <inlineHelpText>Formula field to calculate the MBA Subscription ID on store and trial record types</inlineHelpText>
        <label>BA Store ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BA_Testing_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a testing opportunity? MANUALLY POPULATED</description>
        <inlineHelpText>Is this a testing opportunity? MANUALLY POPULATED</inlineHelpText>
        <label>BA Testing Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BC_Insiders_List__c</fullName>
        <description>Used for pricing 2015</description>
        <inlineHelpText>Used for pricing 2015</inlineHelpText>
        <label>BC Insiders List</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BC_Value_Prop__c</fullName>
        <label>BC Value Prop</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BI_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BI Data</label>
        <referenceTo>BI_Data__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Big_Brand__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this client/prospect a big brand?</description>
        <inlineHelpText>Is this client/prospect a big brand?</inlineHelpText>
        <label>Big Brand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingAmount__c</fullName>
        <label>Billing Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BillingCycle__c</fullName>
        <label>Billing Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>One-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biennially</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Invoice_Special_Instructions__c</fullName>
        <label>Billing/Invoice Special Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Terms__c</fullName>
        <label>Billing Terms</label>
        <picklist>
            <picklistValues>
                <fullName>On Receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 60</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget_Description__c</fullName>
        <label>Budget Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CancellationDate__c</fullName>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CancellationRequestCode__c</fullName>
        <label>Cancellation Request Code</label>
        <picklist>
            <picklistValues>
                <fullName>Consolidating Stores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted Store Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misled by Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Customization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never Took it Seriously</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No/Low Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No/Low Traffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Too Difficult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refused to Disclose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seasonal User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Server Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unresolved Bugs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory Customer Service Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CancellationRequestDate__c</fullName>
        <label>Cancellation Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Idev_accout__c</fullName>
        <formula>Channel_Partner__r.iDev_ID_Text__c</formula>
        <label>RV Match - Channel Partner IDEV Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_MRR__c</fullName>
        <formula>Channel_Partner__r.Active_MRR_Value_Opp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Partner MRR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Channel_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populated via a trigger that fires if the MBA Partner ID is populated. Finds the partner account with the matching value in its iDev Partner ID field and puts the account name here</description>
        <label>Channel Partner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Integrator, Partner, Reseller, Designer, Strategic Partner, Referral, Interspire, Agency Partner, App Partner, Affiliate Partner, Internal,  Theme Partner, Marketing Services, Full Service Agency, Solution Partner, Technology Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Opportunities</relationshipLabel>
        <relationshipName>ClientOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Churn_Date__c</fullName>
        <label>Churn Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Churn_Type__c</fullName>
        <label>Churn Type</label>
        <picklist>
            <picklistValues>
                <fullName>Admin Terminate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unpaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Churn__c</fullName>
        <description>Negative Amount if Status is Cancelled or Terminated</description>
        <formula>IF (OR( ISPICKVAL(Status__c,&quot;Cancelled&quot;),ISPICKVAL(Status__c,&quot;Terminated&quot;)) ,  Amount * -1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Negative Amount if Status is Cancelled or Terminated</inlineHelpText>
        <label>Churn</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Reference_Nomination_Reason__c</fullName>
        <description>Why are you nominating this client for the Client Reference program?</description>
        <inlineHelpText>Why are you nominating this client for the Client Reference program?</inlineHelpText>
        <label>Client Reference Nomination Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Reference_Notes__c</fullName>
        <description>Client Reference Program Notes</description>
        <inlineHelpText>Client Reference Program Notes</inlineHelpText>
        <label>Client Reference Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Reference_Status__c</fullName>
        <description>What is the status of this store in our Client reference program?</description>
        <inlineHelpText>What is the status of this store in our Client reference program?</inlineHelpText>
        <label>Client Reference Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt Out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason_Detail__c</fullName>
        <label>Closed Lost Reason Detail</label>
        <picklist>
            <controllingField>Closed_Lost_Reason__c</controllingField>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100% Uptime Servers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accidental trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliate Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back in stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Order Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ease of Use/Simplification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freight Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Shipping Enhancements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GoDaddy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Importing review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated Dropshipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration with Third Party tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory/Billing Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Themes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Map Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor/Child Sign Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Language Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple ship from location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple ship to location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Store Back-End</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Level Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product visibility based on date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>